--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,3 +3,10 @@
     height: 600px;
     object-fit: cover;
 }
+
+.sh-genero{
+    border-bottom: 1px solid hsla(0, 0%, 70%, .5);
+    padding: 0 .5rem;
+    margin-bottom: .5rem;
+    cursor: default;
+}
