--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -9,25 +9,27 @@
         <div class="card-body">
             <section class="d-flex justify-content-center align-items-center flex-column mb-3">
                 <article class="mb-3">
-                    <img src="https://imgcdn.larepublica.co/i/768/2020/03/18163205/flash-alpha-codersal.jpg" 
+                    <img src="./assets/imgs/user.png" 
                     class="img-fluid sh-rounded-img">
                 </article>
-                <h3 class="text-center">Alexander Avila Briones</h3>
+                <h3 class="text-center">
+                    {{ userAuth.nombres | titlecase }} {{ userAuth.apellidos | titlecase }}
+                </h3>
             </section>
             <section class="row">
                 <article class="col-4 mb-3">
                     <p class="text-center">
-                        <span class="font-weight-bold">Celular:</span> 932265652
+                        <span class="font-weight-bold">Celular:</span> {{ userAuth.telefono }}
                     </p>
                 </article>
                 <article class="col-4 mb-3">
                     <p class="text-center">
-                        <span class="font-weight-bold">Correo:</span> alexanderavilab@gmail.com
+                        <span class="font-weight-bold">Correo:</span> {{ userAuth.correo }}
                     </p>
                 </article>
                 <article class="col-4 mb-3">
                     <p class="text-center">
-                        <span class="font-weight-bold">DNI:</span> 75497209
+                        <span class="font-weight-bold">Género:</span> {{ userAuth.genero }}
                     </p>
                 </article>
                 <article class="col-12 mb-3">
