--- a/src/scss/settings/_vars.scss
+++ b/src/scss/settings/_vars.scss
@@ -5,6 +5,7 @@ $breakpoints: ( sm: 576px, md: 768px, lg: 992px, xl: 1200px);
     --color-primary: #de9531;
     --color-base: #ebecf1;
     --color-dark: #343a40;
+    --color-text-secondary: #707070;
     --color-scroll: #9d9ea0;
     --color-scroll-hover: #686d76;
     //Variables de apilamiento
