--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,6 +7,7 @@
 @import './tags/tags';
 //05-OBJECTS
 @import './objects/layouts/o-grid';
+@import './objects/themes/o-text';
 //06-COMPONENTS
 @import './components/c-auth';
 @import './components/c-card';
