--- a/src/app/pages/peliculas/peliculas.component.html
+++ b/src/app/pages/peliculas/peliculas.component.html
@@ -26,8 +26,9 @@
                                 Terror
                             </span>
                         </h5>
-                        <div class="dropdown position-static">
-                            <button type="button" class="btn btn-round btn-outline-default dropdown-toggle btn-simple btn-icon no-caret" 
+                        <div class="dropdown">
+                            <button type="button" class="btn btn-round btn-outline-secondary 
+                                dropdown-toggle btn-simple btn-icon no-caret" 
                                 data-toggle="dropdown">
                                 <i class="fas fa-pencil-alt"></i>
                             </button>
