--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -31,15 +31,18 @@
             </a>
           </li>
           <li class="nav-item dropdown u-cursor-pointer">
-            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <img src="https://www.pavilionweb.com/wp-content/uploads/2017/03/man-300x300.png" width="25px">
+            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" 
+              data-toggle="dropdown" aria-haspopup="true" 
+              aria-expanded="false">
+              <span class="mr-2">{{ userAuth.nombres }} {{  userAuth.apellidos }}</span>
+              <img src="./assets/imgs/user.png" width="25px">
               <p>
                 <span class="d-lg-none d-md-block">Some Actions</span>
               </p>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Mi perfil</a>
-              <a class="dropdown-item" href="#">Salir</a>
+              <a class="dropdown-item" routerLink="/dashboard/perfil">Mi perfil</a>
+              <a class="dropdown-item u-cursor-pointer" (click)="logout()">Salir</a>
             </div>
           </li>
         </ul>
