--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -81,6 +81,30 @@
             <p class="font-weight-bold">Series</p>
           </a>
         </li>        
+        <li routerLinkActive="active">
+          <a routerLink="/dashboard/mantenimientos/actores">
+            <i class="fas fa-cog"></i>
+            <p class="font-weight-bold">Actores</p>
+          </a>
+        </li>        
+        <li routerLinkActive="active">
+          <a routerLink="/dashboard/mantenimientos/personajes">
+            <i class="fas fa-cog"></i>
+            <p class="font-weight-bold">Personajes</p>
+          </a>
+        </li>        
+        <li routerLinkActive="active">
+          <a routerLink="/dashboard/mantenimientos/directores">
+            <i class="fas fa-cog"></i>
+            <p class="font-weight-bold">Directores</p>
+          </a>
+        </li>        
+        <li routerLinkActive="active">
+          <a routerLink="/dashboard/mantenimientos/estudios">
+            <i class="fas fa-cog"></i>
+            <p class="font-weight-bold">Estudios</p>
+          </a>
+        </li>        
       </ul>
     </div>
 </section>
