--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,13 +12,13 @@
                     <p class="font-weight-bold">Géneros</p>
                     <article>
                       <p class="d-flex justify-content-between align-items-center o-text-secondary sh-genero" 
-                        *ngFor="let g of [1,2,3,4,5,6,7,8,9,7,8,9]"> 
+                        *ngFor="let genero of generos$ | async"> 
                         <span>
                           <i class="fas fa-box-open"></i>
-                          Terror
+                          {{ genero.descripcion }}
                         </span>
                         <span class="badge badge-dark">
-                          220
+                          {{ genero.NumeroPeliculas }}
                         </span>
                       </p>
                     </article>
